Time: 18 ms (88.47%) | Memory: 45.6 MB (87.19%) - LeetSync